testcases/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sdnone
spec:
  containers:
  - name: sdn1
    image: alpine
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    command: ["/bin/sh", "-c"]
    args: ["sleep 2000000000000"]
  
  nodeSelector:
    kubernetes.io/hostname: node1.dtn.lab
