testcases/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sdntwo
spec:
  containers:
  - name: sdn2
    image: golang:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    command: ["/bin/sh", "-c"]
    args: ["sleep 2000000000000"]
  
  nodeSelector:
    kubernetes.io/hostname: node1.dtn.lab
